# youtube-whisper-search

./: .gitignore  README.md  formatselector.py  get_playlist_videos.py  get_videos_transcribed.py  logger.py  pyproject.toml  requirements.txt  search.py
